--- a/www/styles.css
+++ b/www/styles.css
@@ -1,3 +1,9 @@
+body {
+    background-color: black;
+    color: white; 
+    font-family: 'Playfair Display', serif;
+}
+
 h2 {
     text-align: center;
 }
@@ -8,6 +14,8 @@ td {
 }
 
 .well {
+    background-color: black;
+    border: 1px solid black;
     margin-bottom: 2px;
     padding: 5px;
 }
