--- a/www/styles.css
+++ b/www/styles.css
@@ -6,6 +6,7 @@ body {
 
 h2 {
     text-align: center;
+    color: white;
 }
 
 td {
@@ -14,7 +15,7 @@ td {
 }
 
 .well {
-    font-weight: 100;
+    font-weight: 100 !important;
     background-color: black;
     border: 1px solid black;
     margin-bottom: 2px;
